# packet-handler-test-task

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp  packet-parser.cpp  packet-parser.h
tests/: CMakeLists.txt  main.cpp
